# fqdup

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  README.md  SWARM_COMPARISON.md  gate.sh  profile_driver.sh
.github/workflows/: ci.yml
.scripts/: bench.sh
include/fqdup/: bundle_key.hpp  cluster_format.hpp  damage_model_io.hpp  damage_profile.hpp  errcor_empirical.hpp  fastq_common.hpp  fastq_types.hpp  logger.hpp  lr_score.hpp  syncmer.hpp  version.hpp
scripts/: gen_damage_assets.py  gen_html_assets.py  release.sh
src/: cluster_format.cpp  consensus.cpp  damage.cpp  damage_html_assets.hpp  damage_oxog.hpp  damage_profile.cpp  damage_profile_estimate.cpp  damage_profile_lengthstrat.cpp  damage_profile_lsd.cpp  damage_worker.hpp  derep.cpp  derep_pairs.cpp  extend.cpp  fastq_io_backend.cpp  fqcl_viz.css  fqcl_viz.js  gen.cpp  logger.cpp  main.cpp  merge.cpp  sort.cpp  split.cpp  trim.cpp  view.cpp  view_html_assets.hpp
src/derep_detail/: arena.hpp  b3_deam_merge.hpp  banded_ed.hpp  damage_keys.hpp  encoding.hpp  packed_ops.hpp  syncmer_index.hpp
tests/: gen_genome_frags.cpp  gen_genome_frags.py  gen_synthetic.cpp  smoke.sh  test_backends.sh  test_channel_primitives.sh  test_cluster_format.cpp  test_damage.sh  test_damage_auto.sh  test_errcor.sh  test_extend_dmgcor.sh  test_hexamer_confound.sh  test_io_failures.sh  test_math_invariants.sh  test_pipeline.sh  test_syncmer.cpp  test_syncmer_index.cpp  test_t8_rescue.sh
wiki/: Algorithm.md  Damage-Aware-Deduplication.md  Damage.md  Derep-Pairs.md  Derep.md  Extend.md  Home.md  Installation.md  PCR-Error-Correction.md  Performance.md  Usage.md  _Sidebar.md  cluster-format.md
